one step at a time

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,3 +4,28 @@ nodaemon=true
 [program:flask]
 command=gunicorn -b 0.0.0.0:80 main:app
 stdout_logfile=/flask.log
+stderr_logfile=/flask.log
+
+# [program:worker]
+# command=celery -A app.celery.tasks worker --loglevel=INFO --autoscale=10,1
+# stdout_logfile=/worker.log
+# stderr_logfile=/worker.log
+# redirect_stderr = true
+# numprocs = 1
+# autostart = true
+# autorestart = true
+# startsecs = 10
+# stopwaitsecs = 600
+# priority = 998
+
+[program:consumer]
+command=python sw.py
+stdout_logfile=/sw_log.log
+stderr_logfile=/sw_err.log
+redirect_stderr = true
+numprocs = 1
+autostart = true
+autorestart = true
+startsecs = 10
+stopwaitsecs = 600
+priority = 998
