--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,6 @@ humanize==4.8.0
 idna==3.4
 importlib-metadata==6.1.0
 importlib-resources==6.1.1
-ipython==8.13.1
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
@@ -124,7 +123,6 @@ pexpect==4.8.0
 pgvector==0.2.2
 pickleshare==0.7.5
 Pillow==10.0.1
-pinecone-client==3.0.0
 prometheus-client==0.17.1
 prompt-toolkit==3.0.38
 proto-plus==1.23.0
@@ -193,7 +191,7 @@ typer==0.7.0
 types-requests==2.31.0.6
 types-urllib3==1.26.25.14
 typing-inspect==0.9.0
-typing_extensions==4.5.0
+typing_extensions
 tzdata==2023.3
 tzlocal==5.2
 unstructured==0.10.15
