--- a/requirements.txt
+++ b/requirements.txt
@@ -166,6 +166,7 @@ sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.7
 st-annotated-text==4.0.1
+signalwire==2.1.0
 stack-data==0.6.2
 tabulate==0.9.0
 tenacity==8.2.3
