--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-africastalking==1.2.5
+#africastalking==1.2.5
 aiohttp==3.8.4
 aiosignal==1.3.1
 alembic==1.10.2
@@ -16,8 +16,8 @@ bcrypt==3.2.2
 beautifulsoup4==4.12.2
 billiard==3.6.4.0
 blinker==1.7.0
-boto3==1.21.8
-botocore==1.24.46
+#boto3==1.21.8
+#botocore==1.24.46
 cachetools==5.3.2
 celery==5.2.7
 certifi==2022.12.7
@@ -34,18 +34,18 @@ cryptography==41.0.3
 cycler==0.12.1
 dataclasses-json==0.5.14
 decorator==5.1.1
-Deprecated==1.2.14
+#Deprecated==1.2.14
 dill==0.3.7
 distro==1.8.0
 dnspython==2.4.2
 docarray==0.32.1
 elevenlabs==0.2.8
-emoji==2.8.0
+#emoji==2.8.0
 entrypoints==0.4
 exceptiongroup==1.2.0
 executing==1.2.0
-Faker==21.0.0
-favicon==0.7.0
+#Faker==21.0.0
+#favicon==0.7.0
 filetype==1.2.0
 Flask==2.2.3
 Flask-Cors==3.0.10
@@ -58,8 +58,8 @@ fonttools==4.47.0
 frozendict==2.3.10
 frozenlist==1.3.3
 fsspec==2023.12.2
-gitdb==4.0.11
-GitPython==3.1.40
+#gitdb==4.0.11
+#GitPython==3.1.40
 google-ai-generativelanguage==0.4.0
 google-api-core==2.15.0
 google-auth==2.25.2
@@ -99,8 +99,8 @@ markdownlit==0.0.7
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.29.0
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
+#matplotlib==3.8.2
+#matplotlib-inline==0.1.6
 mdurl==0.1.2
 merkle-json==1.0.0
 millify==0.1.1
