--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ dill==0.3.7
 distro==1.8.0
 dnspython==2.4.2
 docarray==0.32.1
-elevenlabs==0.2.8
+#elevenlabs==0.2.8
 #emoji==2.8.0
 entrypoints==0.4
 exceptiongroup==1.2.0
@@ -118,19 +118,19 @@ packaging==23.2
 pandas==2.1.4
 parso==0.8.3
 pdf2image==1.16.3
-pdfminer.six==20221105
+#pdfminer.six==20221105
 pexpect==4.8.0
 pgvector==0.2.2
 pickleshare==0.7.5
-Pillow==10.0.1
+#Pillow==10.0.1
 prometheus-client==0.17.1
 prompt-toolkit==3.0.38
 proto-plus==1.23.0
 protobuf==4.25.1
 psycopg2-binary==2.9.5
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==14.0.2
+#pure-eval==0.2.2
+#pyarrow==14.0.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
