--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==23.2.0
 bidict==0.23.1
 botocore==1.34.128
 certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 dataclasses-json==0.5.14
@@ -49,6 +50,7 @@ packaging==24.1
 passlib==1.7.4
 psycopg2-binary==2.9.6
 pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
@@ -69,6 +71,7 @@ shellingham==1.5.4
 simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.1
+soundfile==0.12.1
 SQLAlchemy==2.0.29
 sqlmodel==0.0.16
 starlette==0.37.2
