--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.0.3
 frozenlist==1.4.1
 greenlet==3.0.3
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
