--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,29 @@ aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 alembic==1.13.1
+amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
+asgiref==3.8.1
 async-timeout==4.0.3
 attrs==23.2.0
 bidict==0.23.1
+billiard==4.2.0
 botocore==1.34.128
+celery==5.4.0
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 dataclasses-json==0.5.14
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.1.2
 exceptiongroup==1.2.1
+filelock==3.15.4
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.6.0
@@ -27,28 +35,49 @@ flask-sock==0.7.0
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.0.3
 frozenlist==1.4.1
+fsspec==2024.6.1
 greenlet==3.0.3
-gunicorn==20.1.0
 h11==0.14.0
+huggingface-hub==0.24.5
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
+kombu==5.3.7
 langchain==0.0.292
 langsmith==0.0.92
+llvmlite==0.43.0
 Mako==1.3.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
 marshmallow-sqlalchemy==0.29.0
 mdurl==0.1.2
+more-itertools==10.3.0
+mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
+networkx==3.3
+numba==0.60.0
 numexpr==2.10.0
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
 openai==0.27.2
+openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab
 packaging==24.1
 passlib==1.7.4
+prompt_toolkit==3.0.47
 psycopg2-binary==2.9.6
 pyasn1==0.6.0
 pycparser==2.22
@@ -64,10 +93,14 @@ python-jose==3.3.0
 python-multipart==0.0.9
 python-socketio==5.11.2
 PyYAML==6.0.1
+redis==5.0.7
+regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
 s3transfer==0.10.1
+safetensors==0.4.4
+scipy==1.14.0
 shellingham==1.5.4
 simple-websocket==1.0.0
 six==1.16.0
@@ -76,16 +109,24 @@ soundfile==0.12.1
 SQLAlchemy==2.0.29
 sqlmodel==0.0.16
 starlette==0.37.2
+sympy==1.13.1
 tenacity==8.4.1
+tiktoken==0.7.0
+tokenizers==0.19.1
+torch==2.3.1
 tqdm==4.66.4
+transformers==4.43.4
+triton==2.3.1
 twilio==9.2.0
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.29.0
+vine==5.1.0
+wcwidth==0.2.13
 websockets==12.0
 Werkzeug==2.2.3
 wsproto==1.2.0
 yarl==1.9.4
-git+https://github.com/openai/whisper.git
